tests/models/f32/fail/min_length.rs
use dade::model;
#[model]
struct TestModel {
    #[field(min_length = 2)]
    value: f32,
}
fn main() {}
